<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2" >

    <LinearLayout
        android:id="@+id/linear_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_vw"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/login_logo" />

        <TextView
            android:id="@+id/title_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E60000"
            android:text="@string/title"	
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:gravity="center"
             />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_subtitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="80dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/subtitle_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"
            android:textColor="#E60000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/user_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="80dp"
            android:text="@string/user"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/user_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/pwd_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="80dp"
            android:text="@string/pwd"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/pwd_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pwd_hint"
            android:inputType="text" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#9C2AA0"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/forget_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="30dp"
            android:text="@string/forget"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>