<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
  
    >

    <EditText
        android:id="@+id/city_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city_hint"
        android:inputType="text"
         android:textStyle="bold"
         />

    <Button
        android:id="@+id/details_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:padding="20dp"
        android:text="@string/getdetail" 
        android:background="@android:color/transparent"
         android:textStyle="bold"
        />

    <TextView
        android:id="@+id/weather_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather"
        android:textSize="20sp" 
         android:textColor="#9C2AA0"
         android:textStyle="bold"/>

    <TextView
        android:id="@+id/city_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
         android:textColor="#9C2AA0"
          android:textStyle="bold" />

    <TextView
        android:id="@+id/Humidity_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
         android:textColor="#9C2AA0"
          android:textStyle="bold" />

    <TextView
        android:id="@+id/temp_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp" 
         android:textColor="#9C2AA0"
          android:textStyle="bold"/>
  <LinearLayout
        android:id="@+id/linear_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:weightSum="2"
       >
    

    <TextView
        android:id="@+id/min_temp_txt"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:textSize="15sp"
         android:textColor="#9C2AA0" 
          android:layout_weight="1"
           android:textStyle="bold"/>

    <TextView
        android:id="@+id/max_temp_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp" 
         android:textColor="#9C2AA0"
          android:layout_weight="1"
           android:textStyle="bold"/>
</LinearLayout>
</LinearLayout>